k8s/base/db-catalogue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-catalogue
  labels:
    app: postgres-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-catalogue
  template:
    metadata:
      labels:
        app: postgres-catalogue
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-catalogue-storage
          mountPath: /var/lib/postgresql/data
        - name: db-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-catalogue-storage
        persistentVolumeClaim:
          claimName: postgres-catalogue-pvc
      - name: db-init
        configMap:
          name: catalogue-db-init
---
apiVersion: v1
kind: Service
metadata:
  name: db-catalogue
spec:
  selector:
    app: postgres-catalogue
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
