k8s/base/service-catalogue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-catalogue
  labels:
    app: service-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-catalogue
  template:
    metadata:
      labels:
        app: service-catalogue
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
      - name: service-catalogue
        image: collector-catalogue
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: service-catalogue
spec:
  selector:
    app: service-catalogue
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
