k8s/base/service-utilisateur.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-utilisateur
  labels:
    app: service-utilisateur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-utilisateur
  template:
    metadata:
      labels:
        app: service-utilisateur
    imagePullSecrets:
      - name: ghcr-auth
    spec:
      containers:
      - name: service-utilisateur
        image: collector-utilisateur
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: service-utilisateur
spec:
  selector:
    app: service-utilisateur
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
